Fix table x-axis overflow

--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -142,3 +142,6 @@ background-color:#39364f;
   color: orange;
 }
 
+.table-wrapper {
+  overflow-x: scroll;
+}
